<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kotobadon.pensk.skeewati_sizebook.NewPersonActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <TextView
        android:id="@+id/personName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" />

    <TextView
        android:id="@+id/personBust"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bust" />

    <EditText
        android:id="@+id/bustEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" />
</LinearLayout>
